Course related service and controller refactored